CARSOLD #48 | rearranged React code: 1) separated global providers with contexts and hooks 2) Changed some files to .ts 3) Started managing Settings in AccountDetails 4) Developed password change: divided it to unauthenticated password change and authenticated password change, made it more reusable